--- a/main.css
+++ b/main.css
@@ -233,6 +233,12 @@ form button,
   color: var(--primary-color);
 }
 
+.videos iframe{
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+}
+
 /* featured section */
 .featured img {
   border-radius: 10px;
