--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Ysabeau+Infant:ital,wght@0,1..1000;1,1..1000&display=swap");
+
 :root {
   --text-color: #525252;
   --primary-color: #935f49;
@@ -37,7 +38,7 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(255, 255, 255, 1));
 }
 
 .navbar-brand img {
@@ -86,11 +87,11 @@ header {
 }
 
 .call {
-  border: 1px solid var(--primary-color);
+  border: 1px solid var(--white-color);
   padding: 10px 20px;
   border-radius: 10px;
   font-size: 14px;
-  color: var(--primary-color) !important;
+  color: var(--white-color) !important;
 }
 
 .navbar button:last-child,
@@ -128,7 +129,6 @@ form button,
   height: 100vh;
   position: relative;
   overflow: hidden;
-  background: url("assets/img/background.png");
 }
 
 .hero-vid {
@@ -162,7 +162,7 @@ form button,
 }
 
 /* ameneties page */
-.testimonial {
+.testimonial-home {
   position: relative;
 }
 
@@ -227,13 +227,14 @@ form button,
 
 .about ul li {
   margin-bottom: 10px;
+  list-style-type: none;
+  display: flex;
+  flex-shrink: 0;
+  gap: 8px;
 }
 
-.about ul li::marker {
-  color: var(--primary-color);
-}
 
-.videos iframe{
+.videos iframe {
   width: 100%;
   height: 200px;
   border-radius: 10px;
@@ -248,7 +249,7 @@ form button,
 /* view more button */
 .view-more {
   position: absolute;
-  top: 50%;
+  top: 55%;
   right: 7%;
   stroke: var(--primary-color) !important;
   background: var(--white-color);
@@ -264,11 +265,11 @@ form button,
   stroke: var(--primary-color);
 }
 
-.nearby h4{
+.nearby h4 {
   color: var(--primary-color) !important;
 }
 
-.nearby p{
+.nearby p {
   margin-bottom: 0rem;
 }
 
@@ -298,7 +299,8 @@ form button,
 
 .review h4,
 .amenities h4,
-.project h4, .nearby h4 {
+.project h4,
+.nearby h4 {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 0;
@@ -331,6 +333,7 @@ form textarea {
 }
 
 /* faq page */
+
 .accordion-button {
   background: linear-gradient(
     to right,
@@ -339,7 +342,6 @@ form textarea {
   ) !important;
   color: var(--white-color) !important;
   box-shadow: none !important;
-  margin-bottom: 10px;
   border-radius: 10px !important;
 }
 
@@ -361,6 +363,10 @@ form textarea {
   background-image: url("assets/img/minus.svg") !important;
 }
 
+.accordion-item h2{
+  margin-bottom: 10px !important;
+}
+
 /* USP Section */
 .point {
   border: 1px solid var(--border-color);
@@ -374,16 +380,16 @@ form textarea {
 
 .usp ul li {
   margin-bottom: 10px;
-}
-
-.usp ul li::marker {
-  color: var(--primary-color);
+  list-style-type: none;
+  display: flex;
+  gap: 8px;
+  flex-shrink: 0;
 }
 
 /* bolpur project */
 .bolpur {
   height: 400px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)),
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(255, 255, 255, 1)),
     url("assets/img/bolpur.jpg");
   background-size: cover;
   background-position: center;
@@ -435,6 +441,10 @@ footer a {
   color: var(--white-color) !important;
 }
 
+footer a:hover {
+  color: var(--primary-color) !important;
+}
+
 footer h3 {
   font-size: 22px;
   font-weight: 400;
@@ -457,6 +467,10 @@ footer strong {
 
 footer svg {
   stroke: var(--white-color) !important;
+}
+
+footer svg:hover {
+  stroke: var(--primary-color) !important;
 }
 
 /* mobile media query */
