--- a/main.css
+++ b/main.css
@@ -97,7 +97,7 @@ header {
 .navbar button:last-child,
 .book,
 form button,
-.view-btn {
+.view-btn, .project button {
   background: linear-gradient(
     to right,
     var(--primary-color),
@@ -112,7 +112,7 @@ form button,
 }
 
 .navbar button:last-child:hover,
-.view-btn:hover {
+.view-btn:hover, .project button:hover {
   background: linear-gradient(
     to right,
     var(--primary-color),
@@ -395,9 +395,25 @@ form textarea {
   background-position: center;
 }
 
-.project img {
+.project-img{
   width: 100%;
   height: 250px;
+  border-radius: 10px;
+  position: relative;
+}
+
+.project-img button{
+  position: absolute;
+  left: 4%;
+  top: 4%;
+  width: fit-content !important;
+  padding: 6px 14px !important;
+  box-shadow: 0px 0px 8px 0px var(--text-color);
+}
+
+.project img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   border-radius: 10px;
 }
