--- a/main.css
+++ b/main.css
@@ -27,6 +27,10 @@ a {
   color: var(--primary-color) !important;
 }
 
+.bg-white {
+  background-color: var(--white-color) !important;
+}
+
 /* header */
 header {
   height: 80px;
@@ -38,7 +42,14 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(255, 255, 255, 1));
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1),
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0),
+    rgba(255, 255, 255, 1)
+  );
 }
 
 .navbar-brand img {
@@ -87,17 +98,18 @@ header {
 }
 
 .call {
-  border: 1px solid var(--white-color);
+  border: 1px solid var(--primary-color);
   padding: 10px 20px;
   border-radius: 10px;
   font-size: 14px;
-  color: var(--white-color) !important;
+  color: var(--primary-color) !important;
 }
 
 .navbar button:last-child,
 .book,
 form button,
-.view-btn, .project button {
+.view-btn,
+.project button {
   background: linear-gradient(
     to right,
     var(--primary-color),
@@ -112,7 +124,8 @@ form button,
 }
 
 .navbar button:last-child:hover,
-.view-btn:hover, .project button:hover {
+.view-btn:hover,
+.project button:hover {
   background: linear-gradient(
     to right,
     var(--primary-color),
@@ -232,7 +245,6 @@ form button,
   flex-shrink: 0;
   gap: 8px;
 }
-
 
 .videos iframe {
   width: 100%;
@@ -363,7 +375,7 @@ form textarea {
   background-image: url("assets/img/minus.svg") !important;
 }
 
-.accordion-item h2{
+.accordion-item h2 {
   margin-bottom: 10px !important;
 }
 
@@ -389,20 +401,26 @@ form textarea {
 /* bolpur project */
 .bolpur {
   height: 400px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(255, 255, 255, 1)),
+  background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0),
+      rgba(255, 255, 255, 1)
+    ),
     url("assets/img/bolpur.jpg");
   background-size: cover;
   background-position: center;
 }
 
-.project-img{
+.project-img {
   width: 100%;
   height: 250px;
   border-radius: 10px;
   position: relative;
 }
 
-.project-img button{
+.project-img button {
   position: absolute;
   left: 4%;
   top: 4%;
@@ -493,7 +511,11 @@ footer svg:hover {
 
 @media screen and (max-width: 768px) {
   .hero-top .navbar {
-    background-color: transparent !important;
+    background-color: transparent;
+  }
+
+  .hero-top .nav-item, .hero-top .dropdown-item{
+    color: var(--text-color) !important;
   }
 
   .navbar {
