--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@ header {
   width: 140px;
 }
 
+
 .hero-top .nav-item,
 .bolpur .nav-item {
   color: var(--white-color) !important;
@@ -520,6 +521,10 @@ footer svg:hover {
 
   .navbar {
     background: var(--white-color);
+  }
+
+  .navbar-toggler svg{
+    stroke: var(--tertiary-color) !important;
   }
 
   .bolpur .nav-item {
