--- a/main.css
+++ b/main.css
@@ -2,9 +2,9 @@
 
 :root {
   --text-color: #525252;
-  --primary-color: #935f49;
+  --primary-color: #f8c946;
   --secondary-color: #c06109;
-  --tertiary-color: #f8c946;
+  --tertiary-color: #935f49;
   --white-color: #fff;
   --border-color: #ccc;
 }
@@ -44,7 +44,7 @@ header {
   height: 100%;
   background: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 1),
+    var(--primary-color),
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 0),
@@ -55,7 +55,6 @@ header {
 .navbar-brand img {
   width: 140px;
 }
-
 
 .hero-top .nav-item,
 .bolpur .nav-item {
@@ -98,7 +97,12 @@ header {
   transition: transform 0.5s ease-in-out;
 }
 
-.call {
+.hero-container .call {
+  color: var(--white-color) !important;
+  border: 1px solid var(--white-color);
+}
+
+.call{
   border: 1px solid var(--primary-color);
   padding: 10px 20px;
   border-radius: 10px;
@@ -515,15 +519,24 @@ footer svg:hover {
     background-color: transparent;
   }
 
-  .hero-top .nav-item, .hero-top .dropdown-item{
+  .hero-top .nav-item,
+  .hero-top .dropdown-item {
     color: var(--text-color) !important;
+  }
+
+  .cst-call{
+    border: 1px solid var(--primary-color);
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 14px;
+    color: var(--primary-color) !important;
   }
 
   .navbar {
     background: var(--white-color);
   }
 
-  .navbar-toggler svg{
+  .navbar-toggler svg {
     stroke: var(--tertiary-color) !important;
   }
 
