--- a/main.css
+++ b/main.css
@@ -44,7 +44,8 @@ header {
   height: 100%;
   background: linear-gradient(
     to bottom,
-    var(--primary-color),
+    rgba(248, 201, 70, 0.8),
+    rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 0),
